--- a/Makefile.rules
+++ b/Makefile.rules
@@ -20,6 +20,8 @@
 # Set your Compiler. Attention you need a compiler which supports the  C++11 standard
 CXX = /usr/bin/g++
 
+LELA_CFLAGS= -I/GITHUB/w/LELA/include
+LELA_LIBS= -L/GITHUB/w/LELA/lib /GITHUB/w/LELA/lib/liblela.a -lgmp -lgmpxx -lpng -L/usr/lib -Wl,-rpath,/usr/lib -lm4ri  -lcblas
 # Configure CXXFLAGS. If you want to use parallelism do not remove "-fopenmp"
 # F4_THREADS is only a default parameter, the thread count can also be set at runtime.
 # COEFF_BITS defines the length of the coefficents. If you need fields larger than 32003,
@@ -27,7 +29,7 @@ CXX = /usr/bin/g++
 # F4_USE_SSE1 enables sse optimizations in the field arithmetics (currently requires GCC)
 # 
 # the following CXXFLAGS are for the GNU COMPILER:
-CXXFLAGS = -fPIC -Wall -fopenmp -O2 -march=native -pipe -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x
+CXXFLAGS = -fPIC -Wall -fopenmp -O2 -march=native -pipe -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x $(LELA_CFLAGS)
 # DEBUG FLAGS:
 #CXXFLAGS = -fPIC -Wall -pg -g3 -gdwarf-2 -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x
 
@@ -43,7 +45,7 @@ dummy:
 	$(CXX) $(CXXFLAGS) -c $<
 
 %.bin: %.C $(LIBRARY)
-	$(CXX) $(CXXFLAGS) -o $(<:%.C=%.bin) $< $(LIBRARY) -lboost_regex
+	$(CXX) $(CXXFLAGS) -o $(<:%.C=%.bin) $< $(LIBRARY) $(LELA_LIBS) -lboost_regex
 
 objclean:
 	rm -f $(OBJ)
