--- a/Makefile.rules
+++ b/Makefile.rules
@@ -20,8 +20,11 @@
 # Set your Compiler. Attention you need a compiler which supports the  C++11 standard
 CXX = /usr/bin/g++
 
-LELA_CFLAGS= -I/GITHUB/w/LELA/include
-LELA_LIBS= -L/GITHUB/w/LELA/lib /GITHUB/w/LELA/lib/liblela.a -lgmp -lgmpxx -lpng -L/usr/lib -Wl,-rpath,/usr/lib -lm4ri  -lcblas
+LELA_CFLAGS= 
+# -I/GITHUB/w/LELA/include
+LELA_LIBS= 
+# -L/GITHUB/w/LELA/lib /GITHUB/w/LELA/lib/liblela.a -lgmp -lgmpxx -lpng -lm4ri  -lcblas
+
 # Configure CXXFLAGS. If you want to use parallelism do not remove "-fopenmp"
 # F4_THREADS is only a default parameter, the thread count can also be set at runtime.
 # COEFF_BITS defines the length of the coefficents. If you need fields larger than 32003,
@@ -29,10 +32,10 @@ LELA_LIBS= -L/GITHUB/w/LELA/lib /GITHUB/w/LELA/lib/liblela.a -lgmp -lgmpxx -lpng
 # F4_USE_SSE1 enables sse optimizations in the field arithmetics (currently requires GCC)
 # 
 # the following CXXFLAGS are for the GNU COMPILER:
-CXXFLAGS = -fPIC -Wall -fopenmp -O2 -march=native -pipe -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x $(LELA_CFLAGS)
+# CXXFLAGS = -fPIC -Wall -fopenmp -O2 -march=native -pipe -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x $(LELA_CFLAGS)
 # DEBUG FLAGS:
-#CXXFLAGS = -fPIC -Wall -pg -g3 -gdwarf-2 -D'F4_THREADS=1' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=1' -std=c++0x
-
+CXXFLAGS = -fPIC -Wall -g -O0 -D'F4_THREADS=0' -D'F4_COEFF_BITS=16' -D'F4_USE_SSE=0' -std=c++0x  $(LELA_CFLAGS)
+# -pg -g3 -gdwarf-2
 # Where the compiled (static) library will be stored.
 LIBRARY = ../lib/libf4.a
 
