--- a/src/Makefile
+++ b/src/Makefile
@@ -17,6 +17,6 @@
 
 include	../Makefile.rules
 
-OBJ=CoeffField.o F4Algorithm.o F4Utils.o Polynomial.o TMonoid.o TOrdering.o Term.o PolynomialSequence.o
+OBJ=CoeffField.o F4Algorithm.o F4Utils.o Polynomial.o TMonoid.o TOrdering.o Term.o PolynomialSequence.o Matrix.o
 
 all: $(OBJ)
